--- a/static/index.css
+++ b/static/index.css
@@ -1,8 +1,10 @@
 body {
-  background-color: blue;
+  background-image: url('/static/coming-soon.png');
 }
 body {font-family: Arial, Helvetica, sans-serif;}
-* {box-sizing: border-box;}
+* {
+  box-sizing: border-box;
+}
 
 /* Full-width input fields */
 input[type=text], input[type=password] {
