--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="/static/index.css">
+    <link rel="stylesheet" href="/static/main/topnav.css">
     <meta charset="utf-8">
     <title></title>
 
@@ -24,7 +25,7 @@
   <!-- end nav bar -->
 
       <a  href="{{ url_for('signup') }}"><button type="submit" class="signupbtn">Sign Up</button></a>
-       <h1>Welcome to Ecom E-commerse web application.V7</h1>
+       <h1>Welcome to Ecom E-commerse web application. V8 </h1>
 
   </body>
 </html>
